[porting] javanize snapshot