@@ -1,90 +1,88 @@
 package pmd.compilerTestService;
 
 import java.io.IOException;
-
-import dotnet4j.io.File;
-import dotnet4j.io.FileMode;
-import dotnet4j.io.FileStream;
-import dotnet4j.io.Path;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 
 public class DosCompiler {
 
-    public static CompileResult Compile(String mmlFilePath, String[] options, String outputFileName, String tooldir) {
-        var tooldirFull = Path.getFullPath(tooldir);
+    public static CompileResult compile(String mmlFilePath, String[] options, String outputFileName, Path tooldir) {
+        var tooldirFull = tooldir.toAbsolutePath();
         var currentDir = System.getProperty("user.home");
-        try {
-            var fullpath = Path.getFullPath(mmlFilePath);
-            var dir = Path.getDirectoryName(fullpath);
-            var fname = Path.getFileName(fullpath);
+        var fullpath = Path.of(mmlFilePath).toAbsolutePath();
+        var dir = fullpath.getParent();
+        var fname = fullpath.getFileName();
 
-            if (dir != null) {
+        if (dir != null) {
 //                Environment.CurrentDirectory = dir;
-            }
+        }
 
-            var psi = new ProcessBuilder().command(Path.combine(tooldirFull, "msdos.exe"));
+        var psi = new ProcessBuilder().command(tooldirFull.resolve("msdos.exe").toString());
 //            RedirectStandardOutput = true;
 //            RedirectStandardError = true;
 //            UseShellExecute = false;
 //            CreateNoWindow = true;
 
-            String option;
-            if (options != null && options.length > 0) {
-                var tmp = new StringBuilder();
-                for (var item : options) {
-                    tmp.append(" %s".formatted(item));
-                }
-                option = tmp.toString();
-            } else {
-                option = " ";
+        String option;
+        if (options != null && options.length > 0) {
+            var tmp = new StringBuilder();
+            for (var item : options) {
+                tmp.append(" %s".formatted(item));
             }
-            psi.command(String.format("%d%d %d", Path.combine(tooldirFull, "MC"), option, fname));
+            option = tmp.toString();
+        } else {
+            option = " ";
+        }
+        psi.command("%s%s %s".formatted(tooldirFull.resolve("pmdmini"), option, fname));
 
+        try {
+            var p = psi.start();
+            var stdout = p.getInputStream().readAllBytes();
+            var stderr = p.getErrorStream().readAllBytes();
+            p.waitFor();
+
+            String outputFileName2 = null;
+            Path outputFile = Path.of(outputFileName);
+            if (Files.exists(outputFile)) {
+                outputFileName2 = outputFileName;
+            } else {
+                // 拡張子のみファイルが生成されるパターンがある?
+                var ext = outputFileName.substring(outputFileName.lastIndexOf('.') + 1);
+                if (Files.exists(Path.of(ext))) {
+                    outputFileName2 = ext;
+                }
+            }
 
             try {
-                var p = psi.start();
-                var stdout = p.getInputStream();
-                var stderr = p.getErrorStream();
-                p.waitFor();
-
-                String outputFileName2 = null;
-                if (File.exists(outputFileName)) {
-                    outputFileName2 = outputFileName;
-                } else {
-                    //  拡張子のみファイルが生成されるパターンがある?
-                    var ext = Path.getExtension(outputFileName);
-                    if (File.exists(ext)) {
-                        outputFileName2 = ext;
-                    }
-                }
-
-                try {
-                    byte[] compiledBinary = null;
-                    if (p.exitValue() == 0 && outputFileName2 != null && File.exists(outputFileName2)) {
+                byte[] compiledBinary = null;
+                if (p.exitValue() == 0 && outputFileName2 != null) {
+                    Path outputFile2 = Path.of(outputFileName2);
+                    if (Files.exists(outputFile2)) {
                         byte[] buffer;
-                        try (var fs = new FileStream(outputFileName, FileMode.Open)) {
-                            buffer = new byte[(int) fs.getLength()];
-                            fs.read(buffer, 0, buffer.length);
+                        try (var fs = Files.newInputStream(outputFile)) {
+                            buffer = fs.readAllBytes();
                         }
 
                         compiledBinary = buffer;
                     }
+                }
 
-                    var log = stdout.equals(stderr) ?
-                            stdout :
-                            String.format("stdout:%s%sstderr:%s", System.lineSeparator(), stdout, stderr);
+                var log = stdout.equals(stderr) ?
+                        stdout :
+                        "stdout:%s%sstderr:%s".formatted(System.lineSeparator(), stdout, stderr);
 
-                    return new CompileResult(p.exitValue(), compiledBinary, log != null ? log.toString() : "");
-                } finally {
-                    if (outputFileName2 != null && File.exists(outputFileName2)) {
-                        File.delete(outputFileName2);
+                return new CompileResult(p.exitValue(), compiledBinary, log != null ? log.toString() : "");
+            } finally {
+                if (outputFileName2 != null) {
+                    Path outputFile2 = Path.of(outputFileName2);
+                    if (Files.exists(outputFile2)) {
+                        Files.delete(outputFile2);
                     }
                 }
-            } catch (IOException | InterruptedException e) {
-                throw new dotnet4j.io.IOException(e);
             }
-        } finally {
-//            Environment.CurrentDirectory = currentDir;
+        } catch (IOException | InterruptedException e) {
+            throw new dotnet4j.io.IOException(e);
         }
     }
 }
